# OpenXRPlugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
3rd/: CMakeLists.txt
3rd/OpenXR-SDK/cmake/: OpenXRConfigVersion.cmake  OpenXRTargets-relwithdebinfo.cmake  OpenXRTargets.cmake
3rd/nlohmann_json/: json.h
3rd/spdlog/: CMakeLists.txt  LibLogConfig.cmake  liblog.cpp  liblog.h  spdlog.h  spdlog_sink.h
example/ViewWindow/: App.xaml.cs  MainWindow.xaml.cs  ViewWindow.sln
src/: CMakeLists.txt
src/openxrplugin/: CMakeLists.txt  openxrplugin_define.h  openxrplugin_global.h
src/openxrplugin/src/: eyetracker.cpp  eyetracker.h  vrcapture.cpp  vrcapture.h
src/xrpluginrun/: CMakeLists.txt  main.cpp
